minor changes to template

--- a/ecs/params.json.template
+++ b/ecs/params.json.template
@@ -24,7 +24,7 @@
         "ParameterValue": ""
     },
     {
-        "ParameterKey": "TowerCryptoSecret",
+        "ParameterKey": "TowerCryptoSecretkey",
         "ParameterValue": ""
     },
     {
@@ -46,5 +46,5 @@
     {
         "ParameterKey": "TowerSmtpPort",
         "ParameterValue": "587"
-    },
+    }
 ]
